refactored about me content fix layout and alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,11 @@ header,
     background: #1c2331 !important;
   }
 }
+
+/* Typography */
+
+.bio-text {
+  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+  color: #777777;
+  font-size: 24px;
+}
